<resources>
    <string name="app_name">Hardware</string>
    <string name="app_local_path">/woTingFM/</string>
    <string name="connect_car_audio_system">连接汽车音响系统</string>
    <string name="fm_settings">FM设置</string>
    <string name="bluetooth_settings">蓝牙设置</string>
    <string name="connection_device">连接设备</string>
    <string name="wlan">无线局域网</string>
    <string name="connected">已连接</string>
    <string name="connect">连接</string>
    <string name="not_connected">未连接</string>
    <string name="flow_management">流量管理</string>
    <string name="setting">设置</string>
    <string name="connection_success">连接成功</string>
    <string name="my_equipment">我的设备</string>
    <string name="select_available_device">选取可用设备</string>
    <string name="select_network">选取网络</string>
    <string name="please_input_password">请输入密码</string>
    <string name="cancel">取消</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="recommended_frequency">推荐可用频率</string>
    <string name="custom_frequency">自定义频率：FM</string>
    <string name="hz">MHz</string>
    <string name="personal_info">个人信息</string>
    <string name="my_concern">我关注的</string>
    <string name="preference_setting">偏好设置</string>
    <string name="message_settings">消息设置</string>
    <string name="clear_cache">清理缓存</string>
    <string name="account_security">账号安全</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="receive_message_push">接收消息推送</string>
    <string name="feed_back">反馈</string>
    <string name="edit_information">请输入您的手机号/邮箱/QQ</string>
    <string name="edit_feedback">您的反馈是我们进步的最大动力...</string>
    <string name="commit">提交</string>
    <string name="head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="brief_introduction">简介</string>
    <string name="gender">性别</string>
    <string name="region">地区</string>
    <string name="age">年龄</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="beijing">北京</string>
    <string name="current_phone_number">请输入当前手机号</string>
    <string name="new_phone_number">请输入新手机号</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="verification_code">请输入验证码</string>
    <string name="confirm">确定</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="new_password">请输入新密码</string>
    <string name="invalid_location">指定位置 %1$s 无法播放</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="room_description">
        Please enter a room name. Room names are shared with everyone, so think
        of something unique and send it to a friend.
    </string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No favorites</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="ok">OK</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="muted">Muted</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="action_settings">Settings</string>
    <string name="action_loopback">Loopback connection</string>
    <string name="connect_description">Connect to the room</string>
    <string name="add_favorite_description">Add favorite</string>
    <string name="format_description">%1$dx%2$d @ %3$d fps</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC video settings.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_screencapture_key">screencapture_preference</string>
    <string name="pref_screencapture_title">Use screencapture.</string>
    <string name="pref_screencapture_default">false</string>
    <string name="pref_camera2_key">camera2_preference</string>
    <string name="pref_camera2_title">Use Camera2.</string>
    <string name="pref_camera2_default">true</string>
    <string name="pref_camera2_not_supported">Not supported on this device.</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_maxvideobitrate_key">maxvideobitrate_preference</string>
    <string name="pref_maxvideobitrate_title">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_dlg">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_default">Default</string>
    <string name="pref_maxvideobitratevalue_key">maxvideobitratevalue_preference</string>
    <string name="pref_maxvideobitratevalue_title">Video encoder maximum bitrate.</string>
    <string name="pref_maxvideobitratevalue_dlg">Enter video encoder maximum bitrate in kbps.</string>
    <string name="pref_maxvideobitratevalue_default">1700</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">true</string>
    <string name="pref_flexfec_key">flexfec_preference</string>
    <string name="pref_flexfec_title">Codec-agnostic Flexible FEC.</string>
    <string name="pref_flexfec_dlg">Enable FlexFEC.</string>
    <string name="pref_flexfec_default">false</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC audio settings.</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_default">false</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_dlg">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_built_in_aec_not_available">Hardware AEC is not available</string>
    <string name="pref_disable_built_in_agc_key">disable_built_in_agc_preference</string>
    <string name="pref_disable_built_in_agc_title">Disable hardware AGC.</string>
    <string name="pref_disable_built_in_agc_dlg">Disable hardware AGC.</string>
    <string name="pref_disable_built_in_agc_default">false</string>
</resources>