<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <ImageView
            android:id="@+id/head_left_btn"
            style="@style/LeftImageStyle"/>

        <TextView
            android:id="@+id/tv_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:text="@string/feedback"
            android:textColor="@color/black_head_word"/>

        <TextView
            android:id="@+id/tv_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:text="@string/commit"
            android:textColor="@color/black_head_word"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/edit_information"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:hint="@string/edit_information"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:singleLine="true"
        android:textColor="@color/black_head_word"
        android:textColorHint="@color/gray_edit_hint_word"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edit_feedback"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/edit_feedback"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="16dp"
        android:textColor="@color/black_head_word"
        android:textColorHint="@color/gray_edit_hint_word"
        android:textSize="16sp"/>

</LinearLayout>