<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <ImageView
            android:id="@+id/head_left_btn"
            style="@style/LeftImageStyle"/>

        <TextView
            android:id="@+id/tv_center"
            android:text="名称"
            android:layout_centerInParent="true"
            style="@style/HeadWordStyle"/>

        <TextView
            android:id="@+id/text_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:textSize="16sp"
            android:textColor="@color/black_head_word"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black_head_word"
        android:textColorHint="@color/gray_edit_hint_word"
        android:textSize="16sp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:hint="@string/input_phone_number"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <EditText
            android:id="@+id/edit_verification_code"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black_head_word"
            android:textColorHint="@color/gray_edit_hint_word"
            android:textSize="16sp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:hint="@string/verification_code"/>

        <TextView
            android:id="@+id/text_send_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_verification_code"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:textSize="16sp"
            android:textColor="@color/app_basic"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textColor="@color/black_head_word"
        android:textColorHint="@color/gray_edit_hint_word"
        android:textSize="16sp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:inputType="textPassword"
        android:hint="@string/new_password"/>

</LinearLayout>