<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include
        android:id="@+id/view_head"
        layout="@layout/common_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_psw"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:hint="@string/please_input_password"
        android:textColorHint="@color/gray_edit_hint_word"
        android:textColor="@color/black_head_word"
        android:maxLength="18"
        android:inputType="textPassword"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:enabled="false"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/app_basic"
        android:text="@string/connect"/>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/black_head_word"/>

</LinearLayout>
